--- a/public/assets/css/admin_style.css
+++ b/public/assets/css/admin_style.css
@@ -6,25 +6,31 @@
     padding: 0;
     direction: rtl;
 }
-*:not(.fa){
+
+*:not(.fa) {
     font-family: Vazirmatn !important;
 }
+
 a {
     text-decoration: none;
 }
+
 body {
     background-color: #fafafa;
 }
+
 .wrapper {
     display: flex;
     width: 100%;
     align-items: stretch;
 }
+
 #main {
     width: 100%;
     margin: 0 auto;
     overflow: hidden;
 }
+
 /*
     Section: Header
     ========================================
@@ -33,10 +39,11 @@ header {
     background-color: white;
     width: 100%;
     height: 60px;
-    box-shadow: 0 0 5px rgba(0,0,0,0.1);
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
     position: relative;
     z-index: 50;
 }
+
 .logo {
 
     font: 22px Vazir;
@@ -46,6 +53,7 @@ header {
     line-height: 60px;
     text-align: center;
 }
+
 .sidebar-collapse {
     font-size: 22px;
     color: #99abb4;
@@ -55,10 +63,12 @@ header {
     display: inline-block;
     text-align: center;
 }
+
 .logo-collapse a:hover {
     color: #444444;
     text-decoration: none;
 }
+
 #nav-profile-image {
     width: 45px;
     height: 45px;
@@ -66,17 +76,21 @@ header {
     background-color: #99abb4;
     overflow: hidden;
 }
+
 #nav-profile-image img {
     width: 100%;
     height: 100%;
 }
+
 .top-nav-link {
     font-size: 22px;
     color: #99abb4;
 }
+
 .top-nav-link:hover {
     color: #444444;
 }
+
 /*
     Section: Sidebar
     ========================================
@@ -89,9 +103,11 @@ header {
     z-index: 1;
     transition: all 0.3s;
 }
+
 #sidebar.collapse-status {
     margin-right: -250px;
 }
+
 /*
     Section: Content
     ========================================
@@ -100,17 +116,19 @@ header {
 #content {
     width: 100%;
 }
+
 #content-header-image {
     height: 250px;
     background: url("../image/admin/photo25@2x.jpg") no-repeat fixed center center;
     background-size: cover;
     position: relative;
 }
+
 #content-header-image:before {
     content: '';
     width: 100%;
     height: 100%;
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(0, 0, 0, 0.5);
     position: absolute;
     top: 0;
     left: 0;
@@ -124,30 +142,33 @@ header {
     font-weight: bold;
     z-index: 2;
 }
+
 #content-header-image p {
     color: #e6e5e5;
     font: 20px Vazir;
     font-weight: normal;
     z-index: 2;
 }
+
 .boxes-info > div {
     background-color: white;
     line-height: 90px;
     border-radius: 5px;
-    box-shadow: 0 0 5px rgba(0,0,0,0.1);
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
-.boxes-info  .icon-box-info {
+
+.boxes-info .icon-box-info {
     font-size: 40px;
     line-height: 90px;
 }
 
-.boxes-info .box-info .number-box-info{
+.boxes-info .box-info .number-box-info {
     font: 30px Vazir;
     font-weight: bold;
     color: #455a64;
 }
 
-.boxes-info .box-info .name-box-info{
+.boxes-info .box-info .name-box-info {
     font: 15px Vazir;
     font-weight: bold;
     color: #99abb4;
@@ -155,36 +176,44 @@ header {
     margin-top: -15px;
     padding-bottom: 15px;
 }
+
 .weather-temp {
     font: 25px Vazir;
     font-weight: bold;
     color: #444444;
 }
+
 .weather-chart {
-    box-shadow: 0 0 5px rgba(0,0,0,0.1);
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
 }
-.sidebar-navigation-box  a {
+
+.sidebar-navigation-box a {
     font: 14px Vazir;
     color: #a9b8bf;
     font-weight: normal;
 }
+
 .sidebar-navigation-box > a {
     font: 17px Vazir;
     font-weight: normal;
     color: #a9b8bf;
 }
+
 .sidebar-navigation-box > a.dropdown-toggle:after {
     position: absolute;
     top: 30px;
     left: -30px;
 }
+
 .sidebar-navigation-box > a.dropdown-toggle {
     position: relative;
 }
+
 .sidebar-navigation-box a:hover {
     color: #00aeef !important;
 }
+
 .sidebar-navigation-box > a > span {
     display: inline-block;
     width: 40px;
@@ -192,9 +221,11 @@ header {
     text-align: center;
     line-height: 40px;
 }
+
 #message-icon {
     position: relative;
 }
+
 #message-box {
     position: absolute;
     top: 50px;
@@ -204,8 +235,9 @@ header {
     max-height: 300px;
     overflow-y: auto;
     background-color: white;
-    box-shadow: 0 0 5px rgba(0,0,0,0.1);
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
+
 #message-box .circle {
     display: block;
     width: 40px;
@@ -213,12 +245,14 @@ header {
     border-radius: 50%;
     background-color: #bd2130;
 }
+
 #message-box {
     font: 12px Vazir;
     color: #444444;
 }
+
 .nicescroll-rails {
-    z-index: 1000!important;
+    z-index: 1000 !important;
 }
 
 @media screen and (max-width: 520px) {
@@ -233,7 +267,22 @@ header {
     #sidebar {
         margin-right: -250px;
     }
+
     #sidebar.collapse-status {
         margin-right: 0;
     }
+}
+
+/*pages styles*/
+table td,table th {
+    vertical-align: middle !important;
+}
+
+fs-9 {
+    font-size: 90% !important;
+}
+
+.plc-rtl::placeholder {
+    text-align: right !important;
+    direction: rtl !important;
 }
