delete some file, add some style to admin_style and add allAlerts components

--- a/public/assets/css/admin_style.css
+++ b/public/assets/css/admin_style.css
@@ -286,3 +286,8 @@ fs-9 {
     text-align: right !important;
     direction: rtl !important;
 }
+
+.danger-checked:checked{
+    background-color: var(--bs-danger);
+    border-color: var(--bs-danger);
+}
