--- a/public/assets/css/front_style.css
+++ b/public/assets/css/front_style.css
@@ -5,7 +5,7 @@
 }
 
 :root {
-    --main-color: #208a75;
+    --main-color: #208a86;
 }
 
 .text-color-main {
@@ -64,6 +64,10 @@ button.main-hover:hover {
 #main-menu .nav-link:hover {
     font-weight: 600;
     border-bottom: 3px solid var(--main-color) !important;
+}
+
+.site-logo {
+    font-size: 1.7rem !important;
 }
 
 @media screen and (max-width: 572px) {
